--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Seed project for react",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --open --port 9000"
+    "start": "npm run clean; cross-env NODE_ENV=development webpack-dev-server --hot --open --port 9000",
+    "build": "npm run clean; cross-env NODE_ENV=production webpack",
+    "clean": "rm -rf ./dist"
   },
   "keywords": [
     "react",
@@ -25,10 +27,14 @@
     "@types/react-dom": "^15.5.4",
     "@types/webpack": "^3.0.10",
     "awesome-typescript-loader": "^3.2.3",
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.7",
+    "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
     "source-map-loader": "^0.2.1",
+    "style-loader": "^0.18.2",
     "ts-node": "^3.3.0",
     "typescript": "^2.5.2",
     "webpack": "^3.5.6",
